<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context="com.example.muklahhn.musicalstructure.MainActivity">

    <TextView
        android:id="@+id/now_playing"
        style="@style/style"
        android:background="@color/color1"
        android:text="@string/now_playing" />

    <TextView
        android:id="@+id/music_list"
        style="@style/style"
        android:background="@color/color2"
        android:text="@string/music_list" />

    <TextView
        android:id="@+id/buy_music"
        style="@style/style"
        android:background="@color/color3"
        android:text="@string/buy_music" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/main_activity" />

</LinearLayout>
