<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.example.muklahhn.musicalstructure.NowPlayingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/now_playing_activity" />

        <ImageView
            android:id="@+id/song_poster"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/tv"
            android:src="@drawable/we_dont_talk_anymore" />

        <SeekBar
            android:id="@+id/songProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/song_poster"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:progressDrawable="@drawable/seekbar_progress"
            android:thumb="@drawable/seek_handler" />

        <LinearLayout
            android:id="@+id/player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/songProgressBar"
            android:layout_alignEnd="@+id/tv"
            android:layout_alignRight="@+id/tv"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageButton
                android:id="@+id/btnBackward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/img_btn_backward" />

            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/img_btn_play" />

            <ImageButton
                android:id="@+id/btnForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/img_btn_forward" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/player"
                android:text="@string/main" />

            <Button
                android:id="@+id/music_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/player"
                android:text="@string/music_list" />

            <Button
                android:id="@+id/buy_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/player"
                android:text="@string/buy_music" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>

